--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">كلمة المرور</string>
   <string name="repeat_password">أعد كتابة كلمة المرور</string>
   <string name="turn_on_button">تشغيل</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">ذكرني لاحقًا</string>
   <string name="get_code_button">احصل على الرمز</string>
   <string name="confirm_button">تأكيد</string>
@@ -500,7 +500,7 @@
   <string name="purchase_error_wallet_block_code_403">يبدو أن هناك مشكلة ما في محفظتك. يرجى التواصل معنا.</string>
   <string name="purchase_card_error_CVV">رمز تحقق خاطئ</string>
   <string name="error_contac_us_body">إذا استمرت هذه المشكلة، يرجى التواصل معنا.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">عنوان الفوترة</string>
   <string name="purchase_address_address_field">العنوان</string>
@@ -764,7 +764,7 @@
   <string name="carrier_billing_fees_disclaimer">تُطبّق تكاليف إضافية</string>
   <string name="carrier_billing_insert_phone_body">يرجى إدخال رقم الهاتف</string>
   <string name="carrier_billing_phone_field">رقم هاتفك...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s ستكلف رسوم %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s في %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">رقم هاتفك هو %s.</string>
   <string name="carrier_billing_enter_pin_body">يرجى إدخال الرمز الذي تلقيته في رسالة SMS.</string>
@@ -856,13 +856,13 @@
   <string name="card_verification_body">استخدم بطاقة الائتمان للتحقق من محفظتك.</string>
   <string name="card_verification_charde_disclaimer">سنتلقي %s من بطاقتك، وسنعيدها حالما تؤكد لنا الرمز.</string>
   <string name="card_verification_code_title">تفقد الرمز في تفاصيل حركة الدفع</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">مثال على ملخص إشعار الدفع</string>
   <string name="card_verification_code_example_date">تاريخ التحويل</string>
   <string name="card_verification_code_example_description">الوصف</string>
   <string name="card_verification_code_example_amount">المقدار</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Unique code.\nExpires in %s days.</string>
+  <string name="card_verification_code_enter_title">Enter the %s digits code</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="zero">%1$s سيتم إرجاعه إليك خلال %2$s ساعة بعد تأكيد الرمز.</item>
     <item quantity="one">%1$s سيتم إرجاعه إليك خلال %2$s ساعتين بعد تأكيد الرمز.</item>
