--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Passwort</string>
   <string name="repeat_password">Paswort wiederholen</string>
   <string name="turn_on_button">Einschalten</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Erinnern Sie mich später daran</string>
   <string name="get_code_button">Einen Code erhalten</string>
   <string name="confirm_button">Bestätigen</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Upps, etwas ist mit dem Wallet nicht in Ordnung, bitte nehmen Sie Kontakt mit uns auf.</string>
   <string name="purchase_card_error_CVV">Falscher CVV/CVC-Code</string>
   <string name="error_contac_us_body">Nehmen Sie Kontakt zu uns auf, falls das Problem weiterbesteht.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Rechnungsadresse</string>
   <string name="purchase_address_address_field">Adresse</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Es können zusätzliche Gebühren anfallen</string>
   <string name="carrier_billing_insert_phone_body">Bitte geben Sie ihre Telefonnummer ein</string>
   <string name="carrier_billing_phone_field">Ihre Telefonnummer...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s wird eine Gebühr von %2$s berechnen</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s bei %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Ihre Telefonnummer ist %s.</string>
   <string name="carrier_billing_enter_pin_body">Geben Sie bitte den Pin ein, den Sie per SMS erhalten haben.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Verwenden Sie ihre Kredit-/Debitkarte um ihr Wallet zu verifizieren.</string>
   <string name="card_verification_charde_disclaimer">Wir belasten ihre Karte mit %s und erstatten Ihnen diesen Betrag wieder wenn Sie den Code bestätigen.</string>
   <string name="card_verification_code_title">Überprüfen Sie den Code in den Transaktionsdetails</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Beispiel einer Zusammenfassung einer Transaktion</string>
   <string name="card_verification_code_example_date">Trans. Datum</string>
   <string name="card_verification_code_example_description">Beschreibung</string>
   <string name="card_verification_code_example_amount">Betrag</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Einmaliger Coder. \nLäuft in %s Tagen ab.</string>
+  <string name="card_verification_code_enter_title">Geben Sie den %s-stelligen Code ein</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s werden innerhalb von %2$s Stunde nach dem sie den Code bestätigt haben zurück überwiesen.</item>
     <item quantity="other">%1$s werden innerhalb von %2$s Stunden nach dem sie den Code bestätigt haben zurück überwiesen.</item>
