--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Κωδικός πρόσβασης</string>
   <string name="repeat_password">Επανάληψη κωδικού πρόσβασης</string>
   <string name="turn_on_button">Ενεργοποίηση</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">Όχι, ευχαριστώ</string>
   <string name="remind_later_button">Υπενθύμιση αργότερα</string>
   <string name="get_code_button">Λάβετε κωδικό</string>
   <string name="confirm_button">Επιβεβαίωση</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Φαίνεται πως υπάρχει κάποιο πρόβλημα με το wallet σας. Παρακαλούμε επικοινωνήστε μαζί μας.</string>
   <string name="purchase_card_error_CVV">Εσφαλμένο CVV/CVC</string>
   <string name="error_contac_us_body">Εάν το πρόβλημα επιμένει, παρακαλούμε επικοινωνήστε μαζί μας.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Προσπαθήστε να ολοκληρώσετε την αγορά αφού πιστοποιήσετε το wallet σας.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Διεύθυνση χρέωσης</string>
   <string name="purchase_address_address_field">Διεύθυνση</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Ενδέχεται να ισχύουν επιπλέον χρεώσεις</string>
   <string name="carrier_billing_insert_phone_body">Παρακαλούμε, εισαγάγετε τον αριθμό του τηλεφώνου σας</string>
   <string name="carrier_billing_phone_field">Ο αριθμός του τηλεφώνου σας...</string>
-  <string name="carrier_billing_carrier_fees_body">Η %1$s θα επιβάλλει τέλος %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s για %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Ο αριθμός του τηλεφώνου σας είναι %s.</string>
   <string name="carrier_billing_enter_pin_body">Παρακαλούμε, εισαγάγετε το PIN που ελήφθη μέσω SMS.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Χρησιμοποιήστε τη χρεωστική/πιστωτική σας κάρτα για να πιστοποιήσετε το wallet σας.</string>
   <string name="card_verification_charde_disclaimer">Η κάρτα σας θα χρεωθεί κατά %s, τα οποία θα επιστραφούν όταν επιβεβαιώσετε τον κωδικό.</string>
   <string name="card_verification_code_title">Ελέγξτε τον κωδικό στις λεπτομέρειες συναλλαγής</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">Ένας μοναδικός κωδικός θα εμφανιστεί στη σύνοψη συναλλαγής που παρέχεται από τον εκδότη της κάρτας σας.</string>
   <string name="card_verification_code_example_title">Παράδειγμα Σύνοψης Συναλλαγής</string>
   <string name="card_verification_code_example_date">Ημ/νία Συναλ.</string>
   <string name="card_verification_code_example_description">Περιγραφή</string>
   <string name="card_verification_code_example_amount">Ποσό</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Μοναδικός κωδικός.\nΛήγει σε %s ημέρες.</string>
+  <string name="card_verification_code_enter_title">Εισαγάγετε τον κωδικό %s ψηφίων</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s θα επιστραφούν εντός %2$s ωρών από την επιβεβαίωση του κωδικού.</item>
     <item quantity="other">%1$s θα επιστραφούν εντός %2$s ωρών από την επιβεβαίωση του κωδικού.</item>
