--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">رمزعبور</string>
   <string name="repeat_password">تکرار رمز عبور</string>
   <string name="turn_on_button">روشن کردن</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">خیر، تشکر</string>
   <string name="remind_later_button">بعدا یادآوری کن</string>
   <string name="get_code_button">دریافت کد</string>
   <string name="confirm_button">تایید</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">به نظر می‌رسد که کیف پول شما مشکلی دارد. لطفا با ما تماس بگیرید.</string>
   <string name="purchase_card_error_CVV">CVV/CVC اشتباه</string>
   <string name="error_contac_us_body">اگر مشکل ادامه داشت لطفا با ما تماس بگیرید.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">سعی کنید خرید خود را پس از تایید کیف پول تکمیل کنید.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">نشانی پرداخت</string>
   <string name="purchase_address_address_field">نشانی</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">ممکن است هزینه‌های جانبی وارد شود</string>
   <string name="carrier_billing_insert_phone_body">لطفا شماره تلفن خود را وارد کنید</string>
   <string name="carrier_billing_phone_field">شماره تلفن شما...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s هزینه %2$s را کسر می کند</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s در %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">شماره تلفن شما %s است.</string>
   <string name="carrier_billing_enter_pin_body">لطفا PIN را که از طریق SMS دریافت کردید وارد کنید.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">برای تایید کیف پول خود از کارت اعتباری خود استفاده کنید.</string>
   <string name="card_verification_charde_disclaimer">ما %s را در کارت شما شارژ خواهیم کرد و پس از تایید کد توسط شما آن را باز می‌گردانیم.</string>
   <string name="card_verification_code_title">کد را در جزییات تراکنش بررسی کنید</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">یک کد ویژه در خلاصه تراکنش توسط بانک شما دیده می‌شود.</string>
   <string name="card_verification_code_example_title">نمونه یک خلاصه تراکنش</string>
   <string name="card_verification_code_example_date">تاریخ تراکنش</string>
   <string name="card_verification_code_example_description">توضیحات</string>
   <string name="card_verification_code_example_amount">مقدار</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">کد ویژه.\n در %s روز منقضی می‌شود.</string>
+  <string name="card_verification_code_enter_title">کد %s رقمی را وارد کنید</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s در %2$s ساعت پس از تایید کد توسط شما، بازگردانده خواهد شد.</item>
     <item quantity="other">%1$s در %2$s ساعت پس از تایید کد توسط شما، بازگردانده خواهد شد.</item>
