--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Mot de passe</string>
   <string name="repeat_password">Répéter le mot de passe</string>
   <string name="turn_on_button">Autoriser</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Rappelez-moi plus tard</string>
   <string name="get_code_button">Obtenir un code</string>
   <string name="confirm_button">Confirmer</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Il semble que quelque chose ne va pas avec votre portefeuille. Veuillez nous contacter.</string>
   <string name="purchase_card_error_CVV">Mauvais CVV/CVC</string>
   <string name="error_contac_us_body">Si le problème persiste, veuillez nous contacter.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Adresse de facturation</string>
   <string name="purchase_address_address_field">Adresse</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Des frais supplémentaires peuvent s\'appliquer</string>
   <string name="carrier_billing_insert_phone_body">Veuillez saisir votre numéro de téléphone</string>
   <string name="carrier_billing_phone_field">Votre numéro de téléphone...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s facturera des frais de %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s en %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Votre numéro de téléphone est le %s.</string>
   <string name="carrier_billing_enter_pin_body">Veuillez saisir le code PIN reçu par SMS.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Utilisez votre carte de crédit/débit pour vérifier votre portefeuille.</string>
   <string name="card_verification_charde_disclaimer">Nous prélèverons %s sur votre carte et nous vous rembourserons une fois que vous aurez confirmé le code.</string>
   <string name="card_verification_code_title">Vérifiez le code dans les détails de la transaction</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Exemple de résumé de transaction</string>
   <string name="card_verification_code_example_date">Date Trans.</string>
   <string name="card_verification_code_example_description">Description</string>
   <string name="card_verification_code_example_amount">Montant</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Code unique.\nExpire dans %s jours.</string>
+  <string name="card_verification_code_enter_title">Entrez les %s chiffres du code</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">Les %1$s seront remboursés dans un délai d\'%2$s heure après que vous ayez confirmé le code.</item>
     <item quantity="other">Les %1$s seront remboursés dans les %2$s heures qui suivent la confirmation du code.</item>
