--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Jelszó</string>
   <string name="repeat_password">Ismételd meg a jelszót</string>
   <string name="turn_on_button">Bekapcsolás</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">Kösz, nem</string>
   <string name="remind_later_button">Emlékeztess később</string>
   <string name="get_code_button">Kód kérése</string>
   <string name="confirm_button">Megerősítés</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Úgy tűnik valami gond van a tárcáddal. Vedd fel velünk a kapcsolatot.</string>
   <string name="purchase_card_error_CVV">Hibás CVV/CVC</string>
   <string name="error_contac_us_body">Ha a probléma továbbra is fennáll, vedd fe velünk a kapcsolatot.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Próbáld meg a tárca hitelesítése után véghezvinni a vásárlást.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Számlázási cím</string>
   <string name="purchase_address_address_field">Cím</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">További költségek léphetnek fel</string>
   <string name="carrier_billing_insert_phone_body">Add meg a telefonszámod</string>
   <string name="carrier_billing_phone_field">A telefonszámod...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s will charge a fee of %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s a(z) %2$s appban.</string>
   <string name="carrier_billing_phone_confirmation_body">A telefonszámod %s.</string>
   <string name="carrier_billing_enter_pin_body">Add meg az SMS-ben érkezett PIN kódot.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Használd a hitelkártyád/bankkártyád a tárca hitelesítéséhez.</string>
   <string name="card_verification_charde_disclaimer">%s összeget vonunk le a kártyádról, majd visszafizetjük miután megerősíted a kódot.</string>
   <string name="card_verification_code_title">Ellenőrizd a kódot a tranzakció részletekben</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A kártyaszolgáltató által kiadott tranzakció összegzésben egy egyedi kód fog megjelenni.</string>
   <string name="card_verification_code_example_title">Tranzakció összegzés pédája</string>
   <string name="card_verification_code_example_date">Tranzakció dátum</string>
   <string name="card_verification_code_example_description">Leírás</string>
   <string name="card_verification_code_example_amount">Összeg</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Egyedi kód.\n%s napon belül jár le.</string>
+  <string name="card_verification_code_enter_title">Írd be a(z) %s számjegyet</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s a kód megerősítését követő %2$s órán belül lesz visszautalva.</item>
     <item quantity="other">%1$s a kód megerősítését követő %2$s órán belül lesz visszautalva.</item>
