--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Kata Sandi</string>
   <string name="repeat_password">Ulangi kata sandi</string>
   <string name="turn_on_button">Aktifkan</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">Tidak, terima kasih</string>
   <string name="remind_later_button">Ingatkan saya nanti</string>
   <string name="get_code_button">Dapatkan kode</string>
   <string name="confirm_button">Konfirmasi</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Sepertinya ada masalah dengan dompet Anda. Silakan hubungi kami.</string>
   <string name="purchase_card_error_CVV">CVV/CVC salah</string>
   <string name="error_contac_us_body">Kalau masalah tetap ada, silakan hubungi kami.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Coba selesaikan pembelian setelah memverifikasi dompet Anda.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Alamat penagihan</string>
   <string name="purchase_address_address_field">Alamat</string>
@@ -758,7 +758,7 @@
   <string name="carrier_billing_fees_disclaimer">Mungkin akan dikenakan biaya tambahan</string>
   <string name="carrier_billing_insert_phone_body">Silakan masukkan nomor telepon Anda</string>
   <string name="carrier_billing_phone_field">Nomor telepon Anda...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s akan mengenakan biaya %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s di %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Nomor telepon Anda adalah %s.</string>
   <string name="carrier_billing_enter_pin_body">Silakan masukkan PIN yang diterima lewat SMS.</string>
@@ -835,13 +835,13 @@
   <string name="card_verification_body">Gunakan kartu kredit/debit Anda untuk memverifikasi dompet Anda.</string>
   <string name="card_verification_charde_disclaimer">Kami akan membebankan %s ke kartu Anda, dan kami akan mengembalikannya setelah Anda mengkonfirmasi kodenya.</string>
   <string name="card_verification_code_title">Periksa kode di rincian transaksi</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">Kode unik akan muncul pada ringkasan transaksi yang diberikan oleh penerbit kartu Anda.</string>
   <string name="card_verification_code_example_title">Contoh Ringkasan Transaksi</string>
   <string name="card_verification_code_example_date">Tanggal Trans.</string>
   <string name="card_verification_code_example_description">Deskripsi</string>
   <string name="card_verification_code_example_amount">Jumlah</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Kode unik.\nBerakhir %s hari lagi.</string>
+  <string name="card_verification_code_enter_title">Masukkan kode %s digit</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="other">%1$s akan dikembalikan dalam %2$s jam setelah Anda mengkonfirmasi kode.</item>
   </plurals>
