--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Password</string>
   <string name="repeat_password">Ripeti password</string>
   <string name="turn_on_button">Attiva</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, grazie</string>
   <string name="remind_later_button">Ricordamelo dopo</string>
   <string name="get_code_button">Ottieni un codice</string>
   <string name="confirm_button">Conferma</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Si è verificato un problema con il tuo wallet. Contattaci.</string>
   <string name="purchase_card_error_CVV">CVV/CVC errato</string>
   <string name="error_contac_us_body">Se il problema persiste, contattaci.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Prova a completare l\'acquisto dopo aver verificato il tuo wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Indirizzo di fatturazione</string>
   <string name="purchase_address_address_field">Indirizzo</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Possono essere applicati dei costi aggiuntivi</string>
   <string name="carrier_billing_insert_phone_body">Inserisci il tuo numero di telefono</string>
   <string name="carrier_billing_phone_field">Il tuo numero di telefono...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s applicherà un costo di %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s in %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Il tuo numero di telefono è %s.</string>
   <string name="carrier_billing_enter_pin_body">Inserisci il PIN che hai ricevuto tramite SMS.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Usa la tua carta di credito/debito per verificare il tuo wallet.</string>
   <string name="card_verification_charde_disclaimer">Prenderemo un pagamento di %s dalla tua carta e lo rimborseremo quando confermerai il codice.</string>
   <string name="card_verification_code_title">Controlla il codice nei dati della transazione</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">Nel sommario della transazione apparirà un codice unico fornito dall\'ente emittente la tua carta.</string>
   <string name="card_verification_code_example_title">Esempio di sommario della transazione</string>
   <string name="card_verification_code_example_date">Data trans.</string>
   <string name="card_verification_code_example_description">Descrizione</string>
   <string name="card_verification_code_example_amount">Quantità</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Codice unico.\nScade fra %s giorni.</string>
+  <string name="card_verification_code_enter_title">Inserisci il codice a %s cifre</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">L\'importo di %1$s sarà rimborsato entro %2$s ora dalla conferma del codice.</item>
     <item quantity="other">L\'importo di %1$s sarà rimborsato entro %2$s ore dalla conferma del codice.</item>
