--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Kata laluan</string>
   <string name="repeat_password">Ulang kata laluan</string>
   <string name="turn_on_button">Dayakan</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Ingatkan saya nanti</string>
   <string name="get_code_button">Dapatkan kod</string>
   <string name="confirm_button">Sahkan</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Alamak, dompet anda ada masalah. Sila hubungi kami.</string>
   <string name="purchase_card_error_CVV">Salah CVV/CVC</string>
   <string name="error_contac_us_body">Jika masalah berlanjutan, sila hubungi kami.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Alamat bil</string>
   <string name="purchase_address_address_field">Alamat</string>
@@ -758,7 +758,7 @@
   <string name="carrier_billing_fees_disclaimer">Bayaran tambahan mungkin dikenakan</string>
   <string name="carrier_billing_insert_phone_body">Sila masukkan nombor telefon anda</string>
   <string name="carrier_billing_phone_field">Nombor telefon anda...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s akan mengenakan bayaran sebanyak %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s dalam %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Nombor telefon anda ialah %s.</string>
   <string name="carrier_billing_enter_pin_body">Sila masukkan PIN yang diterima melalui SMS.</string>
@@ -835,13 +835,13 @@
   <string name="card_verification_body">Gunakan kad debit/kredit untuk sahkan dompet anda.</string>
   <string name="card_verification_charde_disclaimer">Kami akan mengenakan bayaran %s pada kad anda, dan kami akan kembalikannya setelah anda sahkan kod.</string>
   <string name="card_verification_code_title">Semak kod pada butiran transaksi</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Contoh Ringkasan Transaksi</string>
   <string name="card_verification_code_example_date">Tarikh transaksi</string>
   <string name="card_verification_code_example_description">Keterangan</string>
   <string name="card_verification_code_example_amount">Jumlah</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Kod unik.\nLuput dalam masa %s hari.</string>
+  <string name="card_verification_code_enter_title">Masukkan kod %s digit</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="other">%1$s akan dikembalikan dalam masa %2$s jam setelah anda sahkan kod.</item>
   </plurals>
