--- a/app/src/main/res/values-my/strings.xml
+++ b/app/src/main/res/values-my/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">စကားဝွက္</string>
   <string name="repeat_password">စကားဝွက္ကို ျပန္ထည့္ပါ</string>
   <string name="turn_on_button">ဖြင့္မည္</string>
-  <string name="no_thanks_button">ေတာ္ၿပီ။ ေက်းဇူးပါ</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">ေနာက္မွသတိေပးပါ</string>
   <string name="get_code_button">ကုဒ္ရယူမည္</string>
   <string name="confirm_button">အတည္ျပဳမည္</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">သင့္ပိုက္ဆံအိတ္တြင္ တခုခု မွားေနပံုရပါသည္။ ကၽြႏ္ုပ္တို႔ကို ဆက္သြယ္ေပးပါ။</string>
   <string name="purchase_card_error_CVV">CVV/CVC မွားေနပါသည္</string>
   <string name="error_contac_us_body">ျပႆနာဆက္ရွိေနပါက ကၽြႏ္ုပ္တို႔ကို ဆက္သြယ္ေပးပါ။</string>
-  <string name="purchase_error_unverified_wallet">သင့္ပိုက္ဆံအိတ္ကို အတည္ျပဳၿပီးေနာက္ ဝယ္ယူမႈကို ၿပီးေအာင္လုပ္ၾကည့္ပါ။</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">က်သင့္ေငြေကာက္ခံရန္လိပ္စာ</string>
   <string name="purchase_address_address_field">လိပ္စာ</string>
@@ -758,7 +758,7 @@
   <string name="carrier_billing_fees_disclaimer">ေနာက္ထပ္ အခေၾကးေငြမ်ား ရွိႏိုင္ပါသည္</string>
   <string name="carrier_billing_insert_phone_body">သင့္ဖုန္းနံပါတ္ကို ထည့္ေပးပါ</string>
   <string name="carrier_billing_phone_field">သင့္ဖုန္းနံပါတ္...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s သည္ အခေၾကးေငြအျဖစ္ %2$s ေကာက္ခံပါမည္</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%2$s တြင္ %1$s။</string>
   <string name="carrier_billing_phone_confirmation_body">သင့္ဖုန္းနံပါတ္မွာ %s ျဖစ္ပါသည္။</string>
   <string name="carrier_billing_enter_pin_body">SMS မွတဆင့္ရရွိေသာ PIN ကို ထည့္ေပးပါ။</string>
@@ -835,13 +835,13 @@
   <string name="card_verification_body">သင့္ပိုက္ဆံအိတ္ကို အတည္ျပဳရန္ သင့္ခရက္ဒစ္/ဒက္ဘစ္ကဒ္ကို အသံုးျပဳပါ။</string>
   <string name="card_verification_charde_disclaimer">သင့္ကဒ္တြင္ %s ကို ကၽြႏ္ုပ္တို႔ေကာက္ခံကာ ကုဒ္ကိုအတည္ျပဳၿပီးသည္ႏွင့္ ျပန္အမ္းေပးပါမည္။</string>
   <string name="card_verification_code_title">ေငြလႊဲေျပာင္းမႈ အေသးစိတ္မ်ားပါ ကုဒ္ကို စစ္ေဆးပါ</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">ေငြလႊဲေျပာင္းမႈ အက်ဥ္းခ်ဳပ္ ဥပမာ</string>
   <string name="card_verification_code_example_date">လႊဲသည့္ေန႔စြဲ</string>
   <string name="card_verification_code_example_description">ေဖာ္ျပခ်က္</string>
   <string name="card_verification_code_example_amount">ပမာဏ</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Unique code.\nExpires in %s days.</string>
+  <string name="card_verification_code_enter_title">Enter the %s digits code</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="other">ကုဒ္ကို သင္အတည္ျပဳၿပီးေနာက္ %2$s နာရီအတြင္း %1$s ကို ျပန္အမ္းေပးပါမည္။</item>
   </plurals>
