--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Wachtwoord</string>
   <string name="repeat_password">Wachtwoord herhalen</string>
   <string name="turn_on_button">Inschakelen</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Herinner me later</string>
   <string name="get_code_button">Code aanvragen</string>
   <string name="confirm_button">Bevestigen</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Er is iets mis met je wallet. Neem contact met ons op.</string>
   <string name="purchase_card_error_CVV">Onjuiste CVV/CVC</string>
   <string name="error_contac_us_body">Neem contact met ons op als het probleem zich blijft voordoen.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Factuuradres</string>
   <string name="purchase_address_address_field">Adres</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Er kunnen extra kosten van toepassing zijn</string>
   <string name="carrier_billing_insert_phone_body">Voer je telefoonnummer in</string>
   <string name="carrier_billing_phone_field">Je telefoonnummer...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s brengt %2$s in rekening</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s voor %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Je telefoonnummer is %s.</string>
   <string name="carrier_billing_enter_pin_body">Voer de pincode in die je via sms hebt ontvangen.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Gebruik je creditcard/bankpas om je wallet te verifiëren.</string>
   <string name="card_verification_charde_disclaimer">We zullen via je kaart %s in rekening brengen en het bedrag terugstorten als je de code hebt bevestigd.</string>
   <string name="card_verification_code_title">Controleer de code via de transactiegegevens</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Voorbeeld van een transactieoverzicht</string>
   <string name="card_verification_code_example_date">Transactiedatum</string>
   <string name="card_verification_code_example_description">Omschrijving</string>
   <string name="card_verification_code_example_amount">Bedrag</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Unieke code. \nVervalt over %s dagen.</string>
+  <string name="card_verification_code_enter_title">Voer de %s-cijferige code in</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s wordt terugbetaald binnen %2$s uur nadat je de code hebt bevestigd.</item>
     <item quantity="other">%1$s wordt terugbetaald binnen %2$s uur nadat je de code hebt bevestigd.</item>
