--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Hasło</string>
   <string name="repeat_password">Powtórz hasło</string>
   <string name="turn_on_button">Włącz</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">Nie, dziękuję</string>
   <string name="remind_later_button">Przypomnij później</string>
   <string name="get_code_button">Kod</string>
   <string name="confirm_button">Potwierdź</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Coś się nie zgadza z twoim portfelem. Skontaktuj się z nami.</string>
   <string name="purchase_card_error_CVV">Nieprawidłowy CVV/CVC</string>
   <string name="error_contac_us_body">Jeśli problem powróci, skontaktuj się z nami.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Spróbuj dokończyć zakup po sprawdzeniu portfela.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Adres rozliczeniowy</string>
   <string name="purchase_address_address_field">Adres</string>
@@ -761,7 +761,7 @@
   <string name="carrier_billing_fees_disclaimer">Możliwość dodatkowych opłat</string>
   <string name="carrier_billing_insert_phone_body">Wpisz numer telefonu</string>
   <string name="carrier_billing_phone_field">Twój numer telefonu...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s will charge a fee of %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s w %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Twój numer telefonu to%s.</string>
   <string name="carrier_billing_enter_pin_body">Wpisz PIN otrzymany w wiadomości SMS.</string>
@@ -847,13 +847,13 @@
   <string name="card_verification_body">Sprawdź portfel za pomocą karty kredytowej/debetowej.</string>
   <string name="card_verification_charde_disclaimer">Obciążymy twoją kartę %s i zwrócimy tę kwotę, jak tylko potwierdzisz kod.</string>
   <string name="card_verification_code_title">Sprawdź kod w szczegółach transakcji</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">Indywidualny kod pojawi się w podsumowaniu transakcji obsługiwanej przez wydawcę karty.</string>
   <string name="card_verification_code_example_title">Przykład podsumowania transakcji</string>
   <string name="card_verification_code_example_date">Data trans</string>
   <string name="card_verification_code_example_description">Opis</string>
   <string name="card_verification_code_example_amount">Kwota</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Indywidualny kod.\nWygasa za %s dni.</string>
+  <string name="card_verification_code_enter_title">Wprowadź %s-cyfrowy kod</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">Kwota %1$s zostanie zwrócona w ciągu %2$s godziny po potwierdzeniu kodu.</item>
     <item quantity="few">Kwota %1$s zostanie zwrócona w ciągu %2$s godzin po potwierdzeniu kodu.</item>
