--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Senha</string>
   <string name="repeat_password">Repetir senha</string>
   <string name="turn_on_button">Ativar</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Lembrar depois</string>
   <string name="get_code_button">Receber código</string>
   <string name="confirm_button">Confirmar</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Parece que algo não está certo com sua wallet. Por favor, entre em contato conosco.</string>
   <string name="purchase_card_error_CVV">CVV/CVC errado</string>
   <string name="error_contac_us_body">Se o problema persistir, entre em contato conosco.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Endereço de cobrança</string>
   <string name="purchase_address_address_field">Endereço</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Podem ser aplicadas taxas adicionais</string>
   <string name="carrier_billing_insert_phone_body">Insira seu número de telefone</string>
   <string name="carrier_billing_phone_field">Seu número de telefone...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s cobrará uma taxa de %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s em %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Seu número de telefone é %s.</string>
   <string name="carrier_billing_enter_pin_body">Digite o PIN recebido via SMS.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Utilize seu cartão de crédito/débito para verificar sua wallet.</string>
   <string name="card_verification_charde_disclaimer">Cobraremos %s em seu cartão, que será reembolsado assim que você confirmar o código.</string>
   <string name="card_verification_code_title">Verifique o código nos detalhes da transação</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Exemplo de Resumo de Transação</string>
   <string name="card_verification_code_example_date">Data da Transação</string>
   <string name="card_verification_code_example_description">Descrição</string>
   <string name="card_verification_code_example_amount">Quantia</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Código único.\nExpira em %s dias.</string>
+  <string name="card_verification_code_enter_title">Digite o código de %s dígitos</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s será reembolsado em %2$s hora após a confirmação do código.</item>
     <item quantity="other">%1$s será reembolsado em %2$s horas após a confirmação do código.</item>
