--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Password</string>
   <string name="repeat_password">Repetir password</string>
   <string name="turn_on_button">Ligar</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Lembra-me mais tarde</string>
   <string name="get_code_button">Obter código</string>
   <string name="confirm_button">Confirmar</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Parece que algo não está ok com a tua wallet. Por favor, entra em contacto connosco.</string>
   <string name="purchase_card_error_CVV">CVV/CVC errado</string>
   <string name="error_contac_us_body">Se o problema persistir entra em contacto connosco.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Morada de faturação</string>
   <string name="purchase_address_address_field">Morada</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Podem ser aplicadas taxas adicionais</string>
   <string name="carrier_billing_insert_phone_body">Insere o teu número de telemóvel</string>
   <string name="carrier_billing_phone_field">O teu número de telemóvel...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s vai cobrar uma taxa de %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s em %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">O teu número de telemóvel é %s.</string>
   <string name="carrier_billing_enter_pin_body">Digita o PIN que recebeste por SMS.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Usa o teu cartão de crédito/débito para verificar a tua wallet.</string>
   <string name="card_verification_charde_disclaimer">Vamos cobrar %s no teu cartão, e devolvemos assim que confirmares o código.</string>
   <string name="card_verification_code_title">Verifica o código nos detalhes da transação</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Exemplo do Resumo das Transações</string>
   <string name="card_verification_code_example_date">Data de Trans.</string>
   <string name="card_verification_code_example_description">Descrição</string>
   <string name="card_verification_code_example_amount">Quantidade</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Código único.\nExpira em %s dias.</string>
+  <string name="card_verification_code_enter_title">Introduz o código de %s dígitos</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">%1$s serão reembolsados dentro de %2$s hora após confirmares o código.</item>
     <item quantity="other">%1$s serão reembolsados dentro de %2$s horas após confirmares o código.</item>
