--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Parolă</string>
   <string name="repeat_password">Repetă parola</string>
   <string name="turn_on_button">Activează</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Amintește-mi mai târziu</string>
   <string name="get_code_button">Obține cod</string>
   <string name="confirm_button">Confirmă</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Se pare că ceva nu este în regulă cu portofelul tău. Te rugăm să ne contactezi.</string>
   <string name="purchase_card_error_CVV">CVV/CVC greșit</string>
   <string name="error_contac_us_body">Dacă problema continuă, te rugăm să ne contactezi.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Adresă de facturare</string>
   <string name="purchase_address_address_field">Adresă</string>
@@ -760,7 +760,7 @@
   <string name="carrier_billing_fees_disclaimer">Este posibil să se aplice comisioane suplimentare</string>
   <string name="carrier_billing_insert_phone_body">Te rugăm să introduci numărul tău de telefon</string>
   <string name="carrier_billing_phone_field">Numărul tău de telefon...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s te va taxa un comision de %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s în %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Numărul tău de telefon este %s.</string>
   <string name="carrier_billing_enter_pin_body">Introdu PIN-ul primit prin SMS.</string>
@@ -843,13 +843,13 @@
   <string name="card_verification_body">Folosește cardul tău de credit/debit pentru a-ți verifica portofelul.</string>
   <string name="card_verification_charde_disclaimer">Vom debita %s de pe cardul tău și vom rambursa suma imediat ce confirmi codul.</string>
   <string name="card_verification_code_title">Verifică codul în detaliile tranzacției</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Exemplu de rezumat tranzacție</string>
   <string name="card_verification_code_example_date">Data tranz.</string>
   <string name="card_verification_code_example_description">Descriere</string>
   <string name="card_verification_code_example_amount">Sumă</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Cod unic.\nExpiră în %s zile.</string>
+  <string name="card_verification_code_enter_title">Introdu codul format din %s cifre</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">Suma de %1$s va fi rambursată într-un interval de %2$s oră după confirmarea codului.</item>
     <item quantity="few">Suma de %1$s va fi rambursată într-un interval de %2$s ore după confirmarea codului.</item>
