--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">รหัสผ่าน</string>
   <string name="repeat_password">รหัสผ่านซ้ำ</string>
   <string name="turn_on_button">เปิด</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">ไม่ ขอบคุณ</string>
   <string name="remind_later_button">เตือนฉันภายหลัง</string>
   <string name="get_code_button">รับรหัส</string>
   <string name="confirm_button">ยืนยัน</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">มันดูเหมือนว่ามีสิ่งผิกปกติกับกระเป๋าสตางค์ของคุณ โปรดติดต่อเรา</string>
   <string name="purchase_card_error_CVV">CVV/CVC ไม่ถูกต้อง</string>
   <string name="error_contac_us_body">โปรดติดต่อเราหากยังคงมีปัญหา</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">ลองดำเนินการซื้อหลังจากยืนยันกระเป๋าเงินของคุณ</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">ที่อยู่เรียกเก็บเงิน</string>
   <string name="purchase_address_address_field">ที่อยู่</string>
@@ -758,7 +758,7 @@
   <string name="carrier_billing_fees_disclaimer">อาจมีค่าใช้จ่ายเพิ่มเติม</string>
   <string name="carrier_billing_insert_phone_body">โปรดใส่เบอร์โทรศัพท์ของคุณ</string>
   <string name="carrier_billing_phone_field">เบอร์โทรศัพท์ของคุณ...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$sอาจมีการเรียกเก็บค่าธรรมเนียมของ%2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$sใน%2$s</string>
   <string name="carrier_billing_phone_confirmation_body">เบอร์โทรศัพท์ของคุณคือ%s</string>
   <string name="carrier_billing_enter_pin_body">โปรดใส่ PIN ที่ได้รับทาง SMS</string>
@@ -835,13 +835,13 @@
   <string name="card_verification_body">ใช้บัตรเครดิต / เดบิตเพื่อยืนยันกระเป๋าเงินของคุณ</string>
   <string name="card_verification_charde_disclaimer">เราจะเรียกเก็บเงิน %s จากบัตรของคุณและเราจะคืนเงินให้ เมื่อคุณยืนยันรหัส</string>
   <string name="card_verification_code_title">ตรวจสอบรหัสรายละเอียดธุรกรรม</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">รหัสเฉพาะจะแสดงในข้อมูลสรุปธุรกรรมที่ผู้ออกบัตรของคุณให้ไว้</string>
   <string name="card_verification_code_example_title">ตัวอย่างสรุปธุรกรรม</string>
   <string name="card_verification_code_example_date">วันที่โอน</string>
   <string name="card_verification_code_example_description">รายละเอียด</string>
   <string name="card_verification_code_example_amount">ยอดเงิน</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">รหัสเฉพาะ\nหมดอายุในอีก %s วัน</string>
+  <string name="card_verification_code_enter_title">ป้อนรหัส %s</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="other">%1$s จะได้รับคืนภายใน %2$s ชั่วโมงหลังจากที่คุณยืนยันรหัส</item>
   </plurals>
