--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Şifre</string>
   <string name="repeat_password">Şifreyi tekrarlayın</string>
   <string name="turn_on_button">Aç</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Daha sonra hatırlat</string>
   <string name="get_code_button">Kod al</string>
   <string name="confirm_button">Doğrula</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Cüzdanınızla ilgili bir sorun var gibi görünüyor. Lütfen bizimle iletişime geçin.</string>
   <string name="purchase_card_error_CVV">Yanlış CVV/CVC</string>
   <string name="error_contac_us_body">Sorun devam ederse lütfen bizimle iletişime geçin.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Faturalandırma adresi</string>
   <string name="purchase_address_address_field">Adres</string>
@@ -759,7 +759,7 @@
   <string name="carrier_billing_fees_disclaimer">Ek ücretler uygulanabilir</string>
   <string name="carrier_billing_insert_phone_body">Lütfen telefon numaranızı girin</string>
   <string name="carrier_billing_phone_field">Telefon numaranız...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s sizden %2$s ücret alacak</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%2$s uygulamasında %1$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Telefon numaranız %s.</string>
   <string name="carrier_billing_enter_pin_body">Lütfen SMS yoluyla aldığınız PIN\'i girin.</string>
@@ -839,13 +839,13 @@
   <string name="card_verification_body">Cüzdanınızı doğrulamak için kredi/banka kartınızı kullanın.</string>
   <string name="card_verification_charde_disclaimer">Kartınızdan %s alınır ve kodu doğruladığımızda iade edilir.</string>
   <string name="card_verification_code_title">İşlem bilgilerin bilgilerinden kodu kontrol edin</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">İşlem Özeti Örneği</string>
   <string name="card_verification_code_example_date">İşlem Tarihi</string>
   <string name="card_verification_code_example_description">Açıklama</string>
   <string name="card_verification_code_example_amount">Tutar</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Eşsiz kod.\n%s gün içinde süresi doluyor.</string>
+  <string name="card_verification_code_enter_title">%s haneli kodu girin</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="one">Siz kodu onayladıktan sonra %2$s saat içinde %1$s iade edilecek.</item>
     <item quantity="other">Siz kodu onayladıktan sonra %2$s saat içinde %1$s iade edilecek.</item>
