--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -410,7 +410,7 @@
   <string name="password">Mật khẩu</string>
   <string name="repeat_password">Lặp lại mật khẩu</string>
   <string name="turn_on_button">Bật</string>
-  <string name="no_thanks_button">No,thanks</string>
+  <string name="no_thanks_button">No, thanks</string>
   <string name="remind_later_button">Nhắc lại sau</string>
   <string name="get_code_button">Lấy mã</string>
   <string name="confirm_button">Xác nhận</string>
@@ -499,7 +499,7 @@
   <string name="purchase_error_wallet_block_code_403">Có vẻ như có gì đó không ổn với ví của bạn. Xin vui lòng liên hệ ngay với chúng tôi.</string>
   <string name="purchase_card_error_CVV">CVV/CVC sai</string>
   <string name="error_contac_us_body">Nếu vấn đề vẫn không được khắc phục, vui lòng liên hệ ngay với chúng tôi.</string>
-  <string name="purchase_error_unverified_wallet">Try to complete the purchese after verifying your wallet.</string>
+  <string name="purchase_error_unverified_wallet">Try to complete the purchase after verifying your wallet.</string>
   <!--Billing address in purchase flow-->
   <string name="purchase_address_title">Địa chỉ thanh toán</string>
   <string name="purchase_address_address_field">Địa chỉ</string>
@@ -758,7 +758,7 @@
   <string name="carrier_billing_fees_disclaimer">Phí bổ sung có thể được áp dụng</string>
   <string name="carrier_billing_insert_phone_body">Vui lòng nhập số điện thoại của bạn</string>
   <string name="carrier_billing_phone_field">Số điện thoại của bạn...</string>
-  <string name="carrier_billing_carrier_fees_body">%1$s sẽ tính một khoản phí %2$s</string>
+  <string name="carrier_billing_carrier_fees_body">A %1$s fee will be charged.</string>
   <string name="carrier_billing_purchase_info_body">%1$s trong %2$s.</string>
   <string name="carrier_billing_phone_confirmation_body">Số điện thoại của bạn là %s.</string>
   <string name="carrier_billing_enter_pin_body">Vui lòng nhập mã PIN nhận được qua SMS.</string>
@@ -835,13 +835,13 @@
   <string name="card_verification_body">Sử dụng thẻ tín dụng / thẻ ghi nợ của bạn để xác minh ví của mình.</string>
   <string name="card_verification_charde_disclaimer">Chúng tôi sẽ tính phí %s vào thẻ của bạn và tiền sẽ được hoàn lại ngay khi bạn xác nhận mã.</string>
   <string name="card_verification_code_title">Kiểm tra mã trong chi tiết giao dịch</string>
-  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issues.</string>
+  <string name="card_verification_code_body">A unique code will appear in the summary of the transaction provided by your card issuer.</string>
   <string name="card_verification_code_example_title">Ví dụ về Tóm tắt Giao dịch</string>
   <string name="card_verification_code_example_date">Ngày chuyển khoản</string>
   <string name="card_verification_code_example_description">Mô tả</string>
   <string name="card_verification_code_example_amount">Số tiền</string>
-  <string name="card_verification_code_example_code">Unique code</string>
-  <string name="card_verification_code_enter_title">Enter the 4 digits code</string>
+  <string name="card_verification_code_example_code">Mã xác thực.\nHết hạn trong %s ngày.</string>
+  <string name="card_verification_code_enter_title">Nhập mã %s chữ số</string>
   <plurals name="card_verification_code_enter_hours_body">
     <item quantity="other">%1$s sẽ được hoàn lại trong vòng %2$s giờ sau khi bạn xác nhận mã.</item>
   </plurals>
